added additional unlabeled data as all 0s

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,22 +69,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "43101"
+       "[]"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(datalist)"
+    "datalist"
    ]
   },
   {
@@ -431,6 +431,55 @@
     "        print('===================')\n",
     "        if data == '../data/A/formatted/A2091':\n",
     "            break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get list of records without labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6877/6877 [00:35<00:00, 192.96it/s]\n",
+      "100%|██████████| 3453/3453 [00:19<00:00, 175.17it/s]\n",
+      "100%|██████████| 516/516 [00:20<00:00, 25.57it/s]\n",
+      "100%|██████████| 21837/21837 [01:19<00:00, 276.02it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#DATASETS = ['A','B','C','D','E','F']\n",
+    "DATASETS = ['A','B','D','E'] #current for training\n",
+    "#DATASETS = ['D']\n",
+    "datalist_nones = []\n",
+    "\n",
+    "for dataset in DATASETS:\n",
+    "    files = [i[:-4] for i in os.listdir(f'./data/{dataset}/formatted/') if i.find('.npy')!=-1]\n",
+    "    for file in tqdm(files):\n",
+    "        meta = json.load(open(f'./data/{dataset}/formatted/'+file+'.json'))\n",
+    "        if meta['labels_training_merged'] is None:\n",
+    "            datalist_nones.append(meta['filename'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_json = {}\n",
+    "dataset_json['data'] = datalist_nones\n",
+    "\n",
+    "json.dump(dataset_json, open(\"additional_data.json\",\"w\"))"
    ]
   },
   {
