- added train_12ECG_classifier.py and get_12ECG_features.py

--- a/notebooks/1_format_data.ipynb
+++ b/notebooks/1_format_data.ipynb
@@ -18,18 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import 3rd party libraries\n",
     "import os\n",
@@ -60,25 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='A')\n",
     "\n",
     "# Run format process\n",
-    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=True, parallel=True)"
+    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=False, parallel=True)"
    ]
   },
   {
@@ -92,25 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='B')\n",
     "\n",
     "# Run format process\n",
-    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=True, parallel=True)"
+    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=False, parallel=True)"
    ]
   },
   {
@@ -124,23 +99,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='C')\n",
     "\n",
     "# Run format process\n",
-    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=True, parallel=True)"
+    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=False, parallel=True)"
    ]
   },
   {
@@ -154,23 +121,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='D')\n",
     "\n",
     "# Run format process\n",
-    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=True, parallel=True)"
+    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=False, parallel=True)"
    ]
   },
   {
@@ -184,23 +143,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='E')\n",
     "\n",
     "# Run format process\n",
-    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=True, parallel=True)"
+    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=False, parallel=True)"
    ]
   },
   {
@@ -214,25 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formatting Physionet2020 dataset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize data formater\n",
     "data = FormatDataPhysionet2020(dataset='F')\n",
     "\n",
     "# Run format process\n",
-    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=True, parallel=True)"
+    "data.format(fs_resampled=1000, extract=False, debug=False, p_and_t_waves=False, parallel=True)"
    ]
   }
  ],
@@ -252,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
