removed 3rd layer of conv

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,26 +65,6 @@
     "    for file in files:\n",
     "        datalist.append(f'./data/{dataset}/formatted/'+file)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datalist"
    ]
   },
   {
@@ -170,14 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 32683/32683 [02:34<00:00, 211.65it/s]\n"
+      "100%|██████████| 32683/32683 [02:37<00:00, 207.99it/s]\n"
      ]
     }
    ],
@@ -186,22 +166,20 @@
     "\n",
     "for data in tqdm(datalist):\n",
     "    meta = json.load(open(data+'.json'))\n",
-    "    if meta['shape'][0] > 38000:\n",
-    "        continue\n",
-    "    elif meta['labels_training_merged'] is None:\n",
-    "        continue\n",
-    "    else:\n",
-    "        label = meta['labels_training_merged']\n",
-    "        if label[4] > 0 or label[18] >0:\n",
-    "            label[4] = 1\n",
-    "            label[18] = 1\n",
-    "        if label[23] > 0 or label[12] >0:\n",
-    "            label[23] = 1\n",
-    "            label[12] = 1\n",
-    "        if label[26] > 0 or label[13] >0:\n",
-    "            label[26] = 1\n",
-    "            label[13] = 1\n",
-    "        labels.append(label)\n",
+    "    if meta['labels_training_merged'] is None:\n",
+    "        meta['labels_training_merged'] = [0]*27\n",
+    "    \n",
+    "    label = meta['labels_training_merged']\n",
+    "    if label[4] > 0 or label[18] >0:\n",
+    "        label[4] = 1\n",
+    "        label[18] = 1\n",
+    "    if label[23] > 0 or label[12] >0:\n",
+    "        label[23] = 1\n",
+    "        label[12] = 1\n",
+    "    if label[26] > 0 or label[13] >0:\n",
+    "        label[26] = 1\n",
+    "        label[13] = 1\n",
+    "    labels.append(label)\n",
     "    \n",
     "\n",
     "    \n",
