--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -199,34 +199,55 @@
        "       0.5])"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "weights = np.array([1.]*27)\n",
-    "weights[[4,18,23,12,13,26]] = 0.5\n",
-    "weights"
+    "weights_arr = np.array([1.]*27)\n",
+    "weights_arr[[4,18,23,12,13,26]] = 0.5\n",
+    "weights_arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.05770264, 0.10168702, 0.00436978, 0.00916938, 0.08814786,\n",
-       "       0.04290985, 0.05823991, 0.18431892, 0.02876178, 0.00651886,\n",
-       "       0.0284036 , 0.01070955, 0.04359039, 0.00633977, 0.01217809,\n",
-       "       0.00436978, 0.01966403, 0.01232136, 0.08814786, 0.0280096 ,\n",
-       "       0.02432036, 0.68050432, 0.0400086 , 0.04359039, 0.08478097,\n",
-       "       0.01070955, 0.00633977])"
+       "[11.750153846153845,\n",
+       " 6.577333792628315,\n",
+       " 149.171875,\n",
+       " 70.45756457564576,\n",
+       " 3.7990449661758854,\n",
+       " 15.858803986710964,\n",
+       " 11.742927429274292,\n",
+       " 3.7104547221142634,\n",
+       " 23.57283950617284,\n",
+       " 104.91208791208791,\n",
+       " 24.078184110970998,\n",
+       " 63.85953177257525,\n",
+       " 7.372200772200772,\n",
+       " 49.21134020618557,\n",
+       " 56.15882352941176,\n",
+       " 156.50819672131146,\n",
+       " 34.77959927140255,\n",
+       " 55.50581395348837,\n",
+       " 3.7990449661758854,\n",
+       " 24.385696040868453,\n",
+       " 27.99706744868035,\n",
+       " 1.0,\n",
+       " 16.89734513274336,\n",
+       " 7.372200772200772,\n",
+       " 8.066751161808195,\n",
+       " 63.85953177257525,\n",
+       " 49.21134020618557]"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,9 +255,10 @@
    "source": [
     "weights = np.sum(labels,axis=0)\n",
     "weights = weights/labels.shape[0]\n",
-    "# weights[np.where(weights == 0.)] = 1\n",
-    "# weights = 1/weights\n",
-    "# weights = weights.tolist()\n",
+    "weights = weights[21]/weights\n",
+    "#weights = weights / max(weights)\n",
+    "weights = weights * weights_arr\n",
+    "weights = weights.tolist()\n",
     "weights"
    ]
   },
