added weights proportionally to normal

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -212,42 +212,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[11.750153846153845,\n",
-       " 6.577333792628315,\n",
-       " 149.171875,\n",
-       " 70.45756457564576,\n",
-       " 3.7990449661758854,\n",
-       " 15.858803986710964,\n",
-       " 11.742927429274292,\n",
-       " 3.7104547221142634,\n",
-       " 23.57283950617284,\n",
-       " 104.91208791208791,\n",
-       " 24.078184110970998,\n",
-       " 63.85953177257525,\n",
-       " 7.372200772200772,\n",
-       " 49.21134020618557,\n",
-       " 56.15882352941176,\n",
-       " 156.50819672131146,\n",
-       " 34.77959927140255,\n",
-       " 55.50581395348837,\n",
-       " 3.7990449661758854,\n",
-       " 24.385696040868453,\n",
-       " 27.99706744868035,\n",
+       "[0.07507692307692307,\n",
+       " 0.04202549087151223,\n",
+       " 0.9531250000000001,\n",
+       " 0.4501845018450185,\n",
+       " 0.024273776362912856,\n",
+       " 0.10132890365448506,\n",
+       " 0.07503075030750307,\n",
+       " 0.02370773416245628,\n",
+       " 0.1506172839506173,\n",
+       " 0.6703296703296704,\n",
+       " 0.15384615384615388,\n",
+       " 0.40802675585284287,\n",
+       " 0.047104247104247106,\n",
+       " 0.3144329896907217,\n",
+       " 0.3588235294117647,\n",
        " 1.0,\n",
-       " 16.89734513274336,\n",
-       " 7.372200772200772,\n",
-       " 8.066751161808195,\n",
-       " 63.85953177257525,\n",
-       " 49.21134020618557]"
+       " 0.22222222222222227,\n",
+       " 0.3546511627906977,\n",
+       " 0.024273776362912856,\n",
+       " 0.1558109833971903,\n",
+       " 0.17888563049853373,\n",
+       " 0.00638944170943752,\n",
+       " 0.1079646017699115,\n",
+       " 0.047104247104247106,\n",
+       " 0.05154203633291086,\n",
+       " 0.40802675585284287,\n",
+       " 0.3144329896907217]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
     "weights = np.sum(labels,axis=0)\n",
     "weights = weights/labels.shape[0]\n",
     "weights = weights[21]/weights\n",
-    "#weights = weights / max(weights)\n",
+    "weights = weights / max(weights)\n",
     "weights = weights * weights_arr\n",
     "weights = weights.tolist()\n",
     "weights"
