--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -212,42 +212,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[11.750153846153845,\n",
-       " 6.577333792628315,\n",
-       " 149.171875,\n",
-       " 70.45756457564576,\n",
-       " 3.7990449661758854,\n",
-       " 15.858803986710964,\n",
-       " 11.742927429274292,\n",
-       " 3.7104547221142634,\n",
-       " 23.57283950617284,\n",
-       " 104.91208791208791,\n",
-       " 24.078184110970998,\n",
-       " 63.85953177257525,\n",
-       " 7.372200772200772,\n",
-       " 49.21134020618557,\n",
-       " 56.15882352941176,\n",
-       " 156.50819672131146,\n",
-       " 34.77959927140255,\n",
-       " 55.50581395348837,\n",
-       " 3.7990449661758854,\n",
-       " 24.385696040868453,\n",
-       " 27.99706744868035,\n",
-       " 1.0,\n",
-       " 16.89734513274336,\n",
-       " 7.372200772200772,\n",
-       " 8.066751161808195,\n",
-       " 63.85953177257525,\n",
-       " 49.21134020618557]"
+       "[0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.5842180950341156,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686,\n",
+       " 0.033889032160304686]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,8 +255,11 @@
    "source": [
     "weights = np.sum(labels,axis=0)\n",
     "weights = weights/labels.shape[0]\n",
+    "s = (np.mean(weights[:21]) + np.mean(weights[22:]))/2\n",
+    "weights[:21] = s\n",
+    "weights[22:] = s\n",
     "weights = weights[21]/weights\n",
-    "#weights = weights / max(weights)\n",
+    "weights = weights / np.max(weights)\n",
     "weights = weights * weights_arr\n",
     "weights = weights.tolist()\n",
     "weights"
@@ -264,11 +267,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.033889032160304686"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sns.di"
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<AxesSubplot:>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sns.distplot(weights)"
    ]
   },
   {
