added baseline removal

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,6 +465,213 @@
     "            channel = signal[:,i]\n",
     "            plt.plot(channel+i*500)\n",
     "            channel = resampling.downsample(channel,order=2)\n",
+    "            plt.plot(channel+i*500)\n",
+    "        plt.show()\n",
+    "        plt.title(str(meta['labels_full'])+' | '+data)\n",
+    "        print('===================')\n",
+    "        print(data)\n",
+    "        print(meta['labels_full'])\n",
+    "        print('===================')\n",
+    "        if data == '../data/A/formatted/A2091':\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CHecking median filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  9%|▉         | 1/11 [00:04<00:41,  4.16s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===================\n",
+      "./data/A/formatted/A3306\n",
+      "['right bundle branch block']\n",
+      "===================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 27%|██▋       | 3/11 [00:06<00:25,  3.20s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===================\n",
+      "./data/A/formatted/A6853\n",
+      "['sinus rhythm']\n",
+      "===================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 36%|███▋      | 4/11 [00:08<00:20,  2.89s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===================\n",
+      "./data/A/formatted/A3233\n",
+      "['1st degree av block']\n",
+      "===================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 45%|████▌     | 5/11 [00:11<00:17,  2.87s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===================\n",
+      "./data/A/formatted/A3855\n",
+      "['atrial fibrillation']\n",
+      "===================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 55%|█████▍    | 6/11 [00:14<00:15,  3.04s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===================\n",
+      "./data/A/formatted/A5826\n",
+      "['1st degree av block']\n",
+      "===================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 64%|██████▎   | 7/11 [00:16<00:11,  2.87s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===================\n",
+      "./data/A/formatted/A6747\n",
+      "['right bundle branch block']\n",
+      "===================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 82%|████████▏ | 9/11 [00:19<00:04,  2.36s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===================\n",
+      "./data/A/formatted/A0178\n",
+      "['right bundle branch block']\n",
+      "===================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 91%|█████████ | 10/11 [00:22<00:02,  2.50s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===================\n",
+      "./data/A/formatted/A5676\n",
+      "['atrial fibrillation']\n",
+      "===================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 11/11 [00:24<00:00,  2.23s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===================\n",
+      "./data/A/formatted/A3929\n",
+      "['1st degree av block']\n",
+      "===================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.signal import medfilt\n",
+    "\n",
+    "data_range = np.arange(len(datalist))[0:11].tolist()\n",
+    "\n",
+    "datalist_sub = [i for index,i in enumerate(datalist) if index in data_range]\n",
+    "\n",
+    "\n",
+    "for data in tqdm(datalist_sub):\n",
+    "    meta = json.load(open(data+'.json'))\n",
+    "    if meta['shape'][0] > 38000:\n",
+    "        continue\n",
+    "    elif meta['labels_training_merged'] is None:\n",
+    "        continue\n",
+    "    else:\n",
+    "        signal = np.load(data+'.npy')\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        fig = plt.figure(figsize=(20,10))\n",
+    "        for i in range(12):\n",
+    "            channel = signal[:,i]\n",
+    "            channel -= medfilt(channel,501)\n",
     "            plt.plot(channel+i*500)\n",
     "        plt.show()\n",
     "        plt.title(str(meta['labels_full'])+' | '+data)\n",
