--- a/notebooks/error_analysis.ipynb
+++ b/notebooks/error_analysis.ipynb
@@ -84,12 +84,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "competition_metric = Metric()\n",
-    "postprocessing = PostProcessing()"
+    "postprocessing = PostProcessing(0)"
    ]
   },
   {
@@ -101,27 +101,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DEBUG_PATH = './data/CV_debug/B/'\n",
-    "DATA_PATH = './data/B/formatted/'\n",
+    "DEBUG_PATH = './data/CV_debug/E/'\n",
+    "DATA_PATH = './data/E/formatted/'\n",
     "\n",
     "list_records = [i[:-5] for i in os.listdir(DEBUG_PATH) if i.find('.json')!=-1]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dmitriishubin/Desktop/physionet-challenge-2020/utils/KPI_plots.py:54: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-45-229c20a8f509>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mrecord\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist_records\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_label\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_PATH\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrecord\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'labels_training_merged'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mlabel\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'labels_training_merged'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m27\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-037c5ad49b8f>\u001b[0m in \u001b[0;36mload_label\u001b[0;34m(data_path, name)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_label\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_path\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_path\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'.json'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/tf_gpu/lib/python3.7/json/__init__.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(fp, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    294\u001b[0m         \u001b[0mcls\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobject_hook\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mobject_hook\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    295\u001b[0m         \u001b[0mparse_float\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparse_float\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparse_int\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparse_int\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 296\u001b[0;31m         parse_constant=parse_constant, object_pairs_hook=object_pairs_hook, **kw)\n\u001b[0m\u001b[1;32m    297\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    298\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/tf_gpu/lib/python3.7/json/__init__.py\u001b[0m in \u001b[0;36mloads\u001b[0;34m(s, encoding, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    346\u001b[0m             \u001b[0mparse_int\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mparse_float\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    347\u001b[0m             parse_constant is None and object_pairs_hook is None and not kw):\n\u001b[0;32m--> 348\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_default_decoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    349\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcls\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    350\u001b[0m         \u001b[0mcls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mJSONDecoder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/tf_gpu/lib/python3.7/json/decoder.py\u001b[0m in \u001b[0;36mdecode\u001b[0;34m(self, s, _w)\u001b[0m\n\u001b[1;32m    335\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    336\u001b[0m         \"\"\"\n\u001b[0;32m--> 337\u001b[0;31m         \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraw_decode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_w\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    338\u001b[0m         \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_w\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    339\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/tf_gpu/lib/python3.7/json/decoder.py\u001b[0m in \u001b[0;36mraw_decode\u001b[0;34m(self, s, idx)\u001b[0m\n\u001b[1;32m    351\u001b[0m         \"\"\"\n\u001b[1;32m    352\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 353\u001b[0;31m             \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscan_once\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    354\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    355\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mJSONDecodeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Expecting value\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -137,8 +145,20 @@
     "for record in list_records:\n",
     "    \n",
     "    label = load_label(DATA_PATH,record)\n",
+    "    if label['labels_training_merged'] is None:\n",
+    "        label['labels_training_merged'] = [0]*27\n",
     "    records = np.append(records,label['filename'])\n",
     "    label = label['labels_training_merged']\n",
+    "    \n",
+    "    if label[4] > 0 or label[18] > 0:\n",
+    "        label[4] = 1\n",
+    "        label[18] = 1\n",
+    "    if label[23] > 0 or label[12] > 0:\n",
+    "        label[23] = 1\n",
+    "        label[12] = 1\n",
+    "    if label[26] > 0 or label[13] > 0:\n",
+    "        label[26] = 1\n",
+    "        label[13] = 1\n",
     "    \n",
     "    pred = load_label(DEBUG_PATH,record)\n",
     "    pred = pred['predicted_label']\n",
@@ -196,14 +216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Metric for dataset A:  0.48377572309037936\n"
+      "Metric for dataset A:  0.336175734965045\n"
      ]
     }
    ],
@@ -213,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -240,21 +260,61 @@
     "records = records[score_order[::1]]\n",
     "\n",
     "#save a list of files in csv\n",
-    "pd.DataFrame(records).to_csv('./data/dataset_B_list.csv')"
+    "pd.DataFrame(records).to_csv('./data/dataset_D_list.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = [\n",
+    "    '1st degree av block',\n",
+    "'atrial fibrillation',\n",
+    "'atrial flutter',\n",
+    "'bradycardia',\n",
+    "'complete right bundle branch block',\n",
+    "'incomplete right bundle branch block',\n",
+    "'left anterior fascicular block',\n",
+    "'left axis deviation',\n",
+    "'left bundle branch block',\n",
+    "'low qrs voltages',\n",
+    "'nonspecific intraventricular conduction disorder',\n",
+    "'pacing rhythm',\n",
+    "'premature atrial contraction',\n",
+    "'premature ventricular contractions',\n",
+    "'prolonged pr interval',\n",
+    "'prolonged qt interval',\n",
+    "'qwave abnormal',\n",
+    "'right axis deviation',\n",
+    "'right bundle branch block',\n",
+    "'sinus arrhythmia',\n",
+    "'sinus bradycardia',\n",
+    "'sinus rhythm',\n",
+    "'sinus tachycardia',\n",
+    "'supraventricular premature beats',\n",
+    "    't wave abnormal',\n",
+    "    't wave inversion',\n",
+    "    'ventricular premature beats',\n",
+    "]\n",
+    "names = np.array(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predictions:  [[0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0.]]\n",
-      "Label:        [0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+      "Predictions:  [[0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 1. 0. 1. 0. 0.\n",
+      "  1. 0. 0.]]\n",
+      "Predictions names:  ['left axis deviation' 'qwave abnormal' 'sinus arrhythmia' 'sinus rhythm'\n",
+      " 't wave abnormal']\n",
+      "Label:        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -281,10 +341,11 @@
     "    pred = postprocessing.run(pred)\n",
     "    \n",
     "    print('Predictions: ',pred)\n",
+    "    print('Predictions names: ',names[np.where(pred==1)[1]])\n",
     "    print('Label:       ',meta['labels_training_merged'])\n",
     "    return np.array(pred)\n",
     "\n",
-    "record = records[0]\n",
+    "record = records[2]\n",
     "\n",
     "pred = plot_record(record=record)\n"
    ]
@@ -298,12 +359,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "DEBUG_PATH = './data/CV_debug/'\n",
-    "DATASETS = ['A','B','D','E']\n",
+    "DATASETS = ['A','B','D','E','F']\n",
     "\n",
     "list_records = []\n",
     "\n",
@@ -313,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,6 +392,9 @@
     "\n",
     "preds_E = []\n",
     "labels_E = []\n",
+    "\n",
+    "preds_F = []\n",
+    "labels_F = []\n",
     "\n",
     "for record in list_records:\n",
     "    \n",
@@ -363,7 +427,21 @@
     "    \n",
     "    \n",
     "    label = load_label(data_folder,record)\n",
+    "    \n",
+    "    if label['labels_training_merged'] is None:\n",
+    "        label['labels_training_merged'] = [0]*27\n",
+    "        \n",
     "    label = label['labels_training_merged']\n",
+    "    if label[4] > 0 or label[18] > 0:\n",
+    "        label[4] = 1\n",
+    "        label[18] = 1\n",
+    "    if label[23] > 0 or label[12] > 0:\n",
+    "        label[23] = 1\n",
+    "        label[12] = 1\n",
+    "    if label[26] > 0 or label[13] > 0:\n",
+    "        label[26] = 1\n",
+    "        label[13] = 1\n",
+    "    \n",
     "    label = np.array(label).reshape(1,-1)\n",
     "    \n",
     "    pred = load_label(pred_folder,record)\n",
@@ -389,6 +467,9 @@
     "    if dataset == 'E':\n",
     "        preds_E.append(pred)\n",
     "        labels_E.append(label)\n",
+    "    if dataset == 'F':\n",
+    "        preds_F.append(pred)\n",
+    "        labels_F.append(label)\n",
     "    \n",
     "preds = np.array(preds).reshape(-1,27)\n",
     "labels = np.array(labels).reshape(-1,27)\n",
@@ -403,23 +484,26 @@
     "labels_D = np.array(labels_D).reshape(-1,27)\n",
     "\n",
     "preds_E = np.array(preds_E).reshape(-1,27)\n",
-    "labels_E = np.array(labels_E).reshape(-1,27)"
+    "labels_E = np.array(labels_E).reshape(-1,27)\n",
+    "\n",
+    "preds_F = np.array(preds_F).reshape(-1,27)\n",
+    "labels_F = np.array(labels_F).reshape(-1,27)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score across all datasets:  0.5712336672902312\n",
-      "Score, dataset A:  0.756045772108003\n",
-      "Score, dataset B:  0.48377572309037936\n",
-      "Score, dataset D:  nan\n",
-      "Score, dataset E:  0.5216688832100651\n"
+      "Score across all datasets:  0.41046072393982164\n",
+      "Score, dataset A:  0.5030978715106587\n",
+      "Score, dataset B:  0.4566783584916467\n",
+      "Score, dataset D:  -1.406513252829043\n",
+      "Score, dataset E:  0.336175734965045\n"
      ]
     }
    ],
@@ -428,7 +512,8 @@
     "print('Score, dataset A: ',competition_metric.compute(labels_A, preds_A))\n",
     "print('Score, dataset B: ',competition_metric.compute(labels_B, preds_B))\n",
     "print('Score, dataset D: ',competition_metric.compute(labels_D, preds_D))\n",
-    "print('Score, dataset E: ',competition_metric.compute(labels_E, preds_E))"
+    "print('Score, dataset E: ',competition_metric.compute(labels_E, preds_E))\n",
+    "print('Score, dataset F: ',competition_metric.compute(labels_E, preds_E))"
    ]
   },
   {
