- added dataset try-except to training.py.

--- a/notebooks/cloud_train_test.ipynb
+++ b/notebooks/cloud_train_test.ipynb
@@ -29,7 +29,7 @@
     "# Import local Libraries\n",
     "sys.path.insert(0, os.path.dirname(os.path.abspath(os.getcwd())))\n",
     "from kardioml import DATA_PATH\n",
-    "from train_12ECG_classifier_LL import train_12ECG_classifier\n",
+    "from train_12ECG_classifier import train_12ECG_classifier\n",
     "\n",
     "# Configure Notebook\n",
     "import warnings\n",
