--- a/notebooks/2_visualize_formatted_data.ipynb
+++ b/notebooks/2_visualize_formatted_data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -55,12 +55,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "109bfd77403f4cebac5e315c47e01246",
+       "model_id": "bcad867cb24845c585653d1ab5307531",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='filename_id', max=73), Output()), _dom_classes=('widget-…"
+       "interactive(children=(IntSlider(value=0, description='filename_id', max=9528), Output()), _dom_classes=('widge…"
       ]
      },
      "metadata": {},
@@ -69,7 +69,7 @@
    ],
    "source": [
     "# Launch interactive plotter\n",
-    "waveform_plot_interact(dataset='C')"
+    "waveform_plot_interact(dataset='F', save_eps=False)"
    ]
   }
  ],
@@ -89,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
